--- a/home.css
+++ b/home.css
@@ -1,13 +1,26 @@
-body {
+@font-face {
+  font-family: 'Gilroy';
+  src: url(./Gilroy-Regular.woff) format(woff);
+}
+* {
   margin: 0;
   padding: 0;
+  font-family: 'Gilroy', sans-serif;
+}
+header {
+  width: 100%;
+  height: 120vh;
+  background-color: black;
+  linear-gradient: (rgba(160, 160, 160, 0.3));
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 .animation {
   position: absolute;
   width: 100vw;
-  height: 140%;
+  height: 100vh;
   overflow: hidden;
-  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  background-color: linear-gradient(gray, black);
 }
 .box div {
   position: absolute;
@@ -76,60 +89,96 @@ body {
     opacity: 0;
   }
 }
-.navbar {
-  color: seashell;
-  background-color: black;
+nav {
+  width: 100%;
+  height: 10vh;
+  background-image: url('bg1.jpg');
+  opacity: 0.8;
+  color: white;
   display: flex;
-  justify-content:space-between;
-  align-content: center;
-  opacity: 0.9;
-}
-.navbar ul {
-  display: flex;
-  justify-content:space-between;
-  width: 35%;
+  justify-content: space-between;
+  align-items: center;
   text-transform: uppercase;
-  li
 }
-.navbar li{
-    list-style: none;
+nav .logo {
+  width: 25%;
+  text-align: center;
 }
-.navbar li a {
-  text-decoration: none;
-  list-style-type: none;
-  color: seashell;
-  
-}
-.navbar li a:hover{
-    color:rgb(136, 243, 126);
-}
-.info p{
-  display:flex;
-  flex-wrap: wrap;
-  justify-content:right;
-  background-color:white;
-  border-radius: 38px 38px 38px 38px;
--moz-border-radius: 38px 38px 38px 38px;
--webkit-border-radius: 38px 38px 38px 38px;
-border: 3px solid #221375;
-  height: 30vh;
-  width: 70vw;
-  margin-left: 15%;
-  opacity: 0.4;
-}
-.contact {
+nav .menu {
+  width: 40%;
   display: flex;
-  background-color: black;
-  height:40%;
-  color:white;
-
-}
-.info a
-{
-  text-decoration: none;
-  color:black;
+  justify-content: space-around;
   font-weight: bold;
 }
-.info a:hover{
-  color:red;
+nav .menu a {
+  width: 25%;
+  text-decoration: none;
+  color: white;
+}
+nav .menu a:hover {
+  color: yellowgreen;
+}
+main {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: white;
+}
+section {
+}
+section h3 {
+  font-size: 25px;
+  letter-spacing: 3px;
+  font-weight: 200;
+  text-shadow: 1px 1px 2px black;
+}
+section h1 {
+  margin: 50px 0 20px 0;
+  font-size: 30px;
+  font-weight: 700;
+  text-shadow: 2px 1px 5px black;
+  text-transform: uppercase;
+}
+section a {
+  padding: 12px 30px;
+  border-radius: 4px;
+  outline: none;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 500;
+  text-decoration: none;
+  letter-spacing: 1px;
+}
+section .btone,
+.btntwo {
+  background: gray;
+  color: white;
+}
+section .btone:hover,
+.btntwo:hover {
+  background: yellowgreen;
+}
+.change_content:after {
+  content: '';
+  animation: changetext 10s infinite linear;
+  color: greenyellow;
+}
+@keyframes changetext {
+  0% {
+    content: 'INDIA';
+  }
+  10% {
+    content: 'USA';
+  }
+  20% {
+    content: 'AFRICA';
+  }
+}
+footer {
+  height: 10vh;
+  width: 100%;
+  background-image: url('bg1.jpg');
+  color: white;
 }
